versioned_docs/version-8.8/components/agentic-orchestration/design-architecture.md
---
id: ao-design
title: Design and architecture
description: "Plan and design your agentic orchestration solutions, and understand recommended architecture and workflow guidelines."
keywords: ["agentic ai", "AI agents"]
---

import WorkflowImg from './img/ao-workflow.png';

Plan and design your agentic orchestration solutions, and understand recommended architecture guidelines.

## Plan

Follow these principles when planning your agentic orchestration solution:

- **Problem first**: First, identify any problem you might have in a process, and only then determine whether an AI agent could help solve the problem. Do not use an AI agent where it is not really necessary, or just for the sake of it.

- **Architect for composability**. Avoid becoming too dependant on a specific LLM model, for example by doing too much fine tuning. This allows you to more easily integrate newer LLM providers and models in the future that better suit your needs.

- **Observability and governance**: Use [Operate](/components/operate/operate-introduction.md) and [Optimize](/components/optimize/what-is-optimize.md) for visibility into your agentic orchestration processes.

### Blend deterministic and dynamic orchestration

Blending both deterministic and dynamic (AI-driven) process orchestration into your end-to-end processes allows you to take advantage of non-deterministic process orchestration without sacrificing predictability, customer experience, and compliance.

For example, you could use an AI agent to enhance a Know Your Customer (KYC) process, where the AI agent:

- Provides dynamic guidance and problem-solving to the person throughout the process.
- Monitors for policy changes and dynamically changes the process execution in response.
- Automatically adjusts risk level and takes action such as restricting account activity or dynamically adjusting spend limits.

### When to use deterministic or non-deterministic orchestration

Agentic orchestration involves blending both deterministic and dynamic (AI-driven) process orchestration into your end-to-end processes. It is important to understand when to use each approach:

| &nbsp;           | Deterministic                                                                                                                                                                                                | Dynamic                                                                                                                                                                                                                                |
| ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Suitable for** | <p><ul><li><p>Clear, predictable paths.</p></li><li><p>Repeatable, rules-based decisions.</p></li><li><p>Fast, efficient execution.</p></li><li><p>Regulation dictates execution sequence.</p></li></ul></p> | <p><ul><li><p>Flexible, context-aware choices.</p></li><li><p>AI-driven task planning.</p></li><li><p>Unstructured cases: classification, triage, or investigation.</p></li><li><p>Adaptable to data and conditions.</p></li></ul></p> |
| **Enabled by**   | <p><ul><li><p>Advanced workflow patterns.</p></li><li><p>Business/IT alignment on process and decision logic.</p></li></ul></p>                                                                              | <p><ul><li><p>Dynamic task scheduling and tracking.</p></li><li><p>Collaboration between AI and Human.</p></li></ul></p>                                                                                                               |

:::info
To learn more about determining when and where to use AI agents within your automation strategy, download the [why agentic process orchestration belongs in your automation](https://page.camunda.com/wp-why-agentic-process-orchestration-belongs-in-your-automation-strategy) strategy guide.
:::

## Design and architecture

Follow these principles when designing your agentic orchestration solution:

- **Guardrail sandwich**: Apply guardrails in your process when using agents. For example, you could have one agent performing the task execution, with another agent following up to check the chain of thought and make sure every execution is compliant. If the execution is not compliant, route to a human for additional validation.

- **Human-in-the-Loop escalation**: Provide an agent with an escalation path to a human - confidence levels are useful, but it is good to always provide deterministic outbreaks for agents.

- **Prompt versioning**: Version every prompt, so you can revert to using a previous prompt when required.

### AI gateway and model routing

In production agentic systems, model routing and fallback (switching between LLM providers when one is unavailable, rate-limited, or non-compliant) is a common need. This capability belongs to the **AI gateway layer**, not the orchestration layer. Dedicated AI gateways, such as LiteLLM or OpenRouter, handle concerns like:

- Routing requests to a preferred model or provider.
- Falling back to an alternative model when the primary is unavailable or rate-limited.
- Enforcing provider-level policies. For example, data residency or cost caps.

Camunda operates at the **orchestration layer**, complementing these gateways by providing production-level visibility and control over the outcomes of routing decisions:

- **Observability**: Track which model and provider handled each agent interaction through process variables in [Operate](/components/operate/operate-introduction.md). When your gateway routes to a fallback model, Camunda can capture this context, including the model used, the provider, and the reason for fallback, making every decision auditable at the process level.
- **Process-level reasoning**: Use a BPMN gateway to route to a human review step when a fallback model was used, or to flag the instance for compliance review.
- **Resilience patterns**: Combine Camunda's built-in retry and incident handling with your gateway's routing logic. If all providers fail, Camunda can escalate to a human task or trigger an alternative process path rather than silently failing.

:::tip
When connecting your AI agent to an LLM through an AI gateway, configure the gateway to return routing metadata, such as which model served the request and why. Store this metadata in process variables so you can observe and act on it in your BPMN process.
:::

### How execution works in an AI agent

In Camunda agentic orchestration, decision-making and orchestration are intentionally split:

- **LLM responsibility**: Interprets the system prompt, current user prompt, and available tool descriptions. It decides which tool to call, in what order, and with which parameters.
- **Camunda responsibility**: Executes the selected BPMN activities, stores process state, applies retries and incident handling, and coordinates user tasks and other deterministic workflow logic.

Think of the ad-hoc sub-process as a governed toolbox:

- Each activity can be selected by the LLM as a tool.
- Activities can be executed multiple times, in different orders, in parallel, or skipped.
- The LLM chooses a path from the allowed options, while Camunda enforces process boundaries and execution reliability.

This is a typical execution timeline:

1. A user submits a prompt.
1. The LLM evaluates the prompt together with the configured system prompt and available tool definitions.
1. The LLM chooses one or more tool calls.
1. Camunda activates and executes the corresponding BPMN activities.
1. Results are written to process variables and returned to the LLM context.
1. The loop repeats until the LLM returns a final response or the process routes to deterministic follow-up steps.

### Define your agent tools

In the AI agent model, each BPMN activity inside an ad-hoc sub-process is a tool exposed to the LLM. The activity name and its documentation are used by the LLM to decide what to do next.

Clear, behavior-oriented descriptions help the LLM:

- Select the right tool for the current goal.
- Pass the right parameters in the expected format.
- Avoid unsafe, redundant, or nonsensical actions.

Poor or missing documentation increases the risk of:

- Incorrect or ambiguous tool selection.
- Repeated tool calls or skipped required steps.
- Hallucinated behavior and responses that do not match process intent.

#### Example: weak vs strong tool definition

| Tool definition | Example                                                                                                                                                                                                                                           |
| :-------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| Weak            | **Name**: `Lookup`<br/>**Documentation**: `Find customer data`                                                                                                                                                                                    |
| Strong          | **Name**: `Resolve customer by legal company name`<br/>**Documentation**: `Use this tool when a document mentions a company and you need its internal customer ID. If multiple matches are returned, request human validation before continuing.` |

A clear tool name and precise documentation make the expected behavior explicit, improving reliability during tool selection and execution.

#### Tool parameters

Each tool can also declare input parameters the LLM must supply at runtime. Use the [`fromAi()`](../modeler/feel/builtin-functions/feel-built-in-functions-ai-agent.md#fromaivalue) [AI agent function](/reference/glossary.md#ai-agent-function) in input mappings to mark a value as LLM-provided, with an optional description and type to guide the model.

For a full reference on tool names, documentation, and parameters, see [Tool definitions](../connectors/out-of-the-box-connectors/agentic-ai-aiagent-tool-definitions.md).

### Mixing agents with workflow patterns

<p><img src={WorkflowImg} style={{marginBottom: '0'}} title="Diagram showing how to mix agents into your workflow patterns" className="img-transparent"/></p>

<table className="table-callout">
<tr>
    <td><span className="callout">1</span></td>
    <td>**Process flow within tools**: Full BPMN control inside ad-hoc sub-processes for ultimate flexibility.</td>
</tr>
<tr>
    <td><span className="callout">2</span></td>
    <td>**Agents pivot instantly with external messages and timers**: During execution, agents can be influenced by events like external messages or timers, enabling on-the-fly adjustments.</td>
</tr>
<tr>
    <td><span className="callout">3</span></td>
    <td>**Event-driven agent reconfiguration**: Sub-workflows handle new data, guiding the next AI steps.</td>
</tr>
<tr>
    <td><span className="callout">4</span></td>
    <td>**Agents orchestrate sub-workflow**: A tool doesn't need to be a single tool - it can be a whole subprocess.</td>
</tr>
<tr>
    <td><span className="callout">5</span></td>
    <td>**Multi-agent orchestration**: Agents orchestrate other agents for streamlined, scalable solutions. This agent-to-agent pattern runs inside Camunda's [agentic orchestration](/components/agentic-orchestration/agentic-orchestration-overview.md), as one of the tools available to an agent. It is not the same as agentic orchestration itself, which is Camunda's overall model for orchestrating agents, people, and systems.</td>
</tr>
</table>
